Settings: Add pocket lock toggle
Change-Id: I398c8f0be23c27cbcf1fb57eed44a801b31bc6c9
Signed-off-by: Alex Naidis <alex.naidis@linux.com>
Signed-off-by: TheStrix <parthbhatia98@gmail.com>

--- a/res/values/dot_strings.xml
+++ b/res/values/dot_strings.xml
@@ -170,4 +170,8 @@
     <!-- Font picker -->
     <string name="font_picker_title">Font</string>
     <string name="font_picker_progress">Applying new font\u2026</string>
+
+    <!-- Pocket judge -->
+    <string name="pocket_judge_title">Pocket detection</string>
+    <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
 </resources>
