--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -150,6 +150,11 @@
         android:title="@string/display_vr_pref_title"
         android:fragment="com.android.settings.display.VrDisplayPreferencePicker" />
 
+    <SwitchPreference
+        android:key="pocket_judge"
+        android:title="@string/pocket_judge_title"
+        android:summary="@string/pocket_judge_summary" />
+
     <PreferenceCategory
         android:key="theme_category"
         android:title="@string/theme_category_title">
