Settings: Add switch for linked ring and media notification volumes
Change-Id: I900af398f566a5415c44fe883cc214985f4e9cd4
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/res/values/dot_strings.xml
+++ b/res/values/dot_strings.xml
@@ -184,6 +184,9 @@
 	
 	<!-- Notification log -->
     <string name="notification_log_summary">Show notifications history log</string>
+	
+    <!-- Volume link notification -->
+    <string name="volume_link_notification_title">Link ring &amp; notification volumes</string>
 </resources>
 
 
