--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -62,21 +62,28 @@
         android:order="-160"
         settings:controller="com.android.settings.notification.RingVolumePreferenceController"/>
 
-    <!-- Alarm volume -->
-    <com.android.settings.notification.VolumeSeekBarPreference
-        android:key="alarm_volume"
-        android:icon="@*android:drawable/ic_audio_alarm"
-        android:title="@string/alarm_volume_option_title"
-        android:order="-150"
-        settings:controller="com.android.settings.notification.AlarmVolumePreferenceController"/>
-
     <!-- Notification volume -->
     <com.android.settings.notification.VolumeSeekBarPreference
         android:key="notification_volume"
         android:icon="@drawable/ic_notifications"
         android:title="@string/notification_volume_option_title"
-        android:order="-140"
+        android:order="-150"
         settings:controller="com.android.settings.notification.NotificationVolumePreferenceController"/>
+
+    <!-- Link ringtone and notification volumes -->
+    <com.dot.dotextras.preference.SecureSettingSwitchPreference
+        android:key="volume_link_notification"
+        android:title="@string/volume_link_notification_title"
+        android:defaultValue="true"
+        android:order="-140"/>
+
+    <!-- Alarm volume -->
+    <com.android.settings.notification.VolumeSeekBarPreference
+        android:key="alarm_volume"
+        android:icon="@*android:drawable/ic_audio_alarm"
+        android:title="@string/alarm_volume_option_title"
+        android:order="-133"
+        settings:controller="com.android.settings.notification.AlarmVolumePreferenceController"/>
 
     <!-- Also vibrate for calls -->
     <SwitchPreference
@@ -172,7 +179,7 @@
           android:title="@string/docking_sounds_title" />
 
         <!-- Screenshot sound -->
-	<com.dot.dotextras.preference.SystemSettingSwitchPreference
+        <com.dot.dotextras.preference.SystemSettingSwitchPreference
           android:key="screenshot_sound"
           android:title="@string/screenshot_sound_title"
           android:defaultValue="true" />
