--- a/res/values/dot_strings.xml
+++ b/res/values/dot_strings.xml
@@ -170,4 +170,7 @@
     <!-- Font picker -->
     <string name="font_picker_title">Font</string>
     <string name="font_picker_progress">Applying new font\u2026</string>
+	
+    <!-- Volume link notification -->
+    <string name="volume_link_notification_title">Link ring &amp; notification volumes</string>
 </resources>
