Notification log improvements
Change-Id: I5d50070c11d4d1d0a4e1bb2be53e61929ebe1d1d

--- a/res/values/dot_strings.xml
+++ b/res/values/dot_strings.xml
@@ -171,6 +171,9 @@
 
     <!-- Sound: Title for the option defining the phone ringtone for slot2 on Muilti SIM device. [CHAR LIMIT=50] -->
     <string name="ringtone2_title">Phone ringtone - SIM 2</string>
+	
+	<!-- Notification log -->
+    <string name="notification_log_summary">Show notifications history log</string>
 </resources>
 
 
