--- a/res/values/dot_colors.xml
+++ b/res/values/dot_colors.xml
@@ -39,4 +39,7 @@
     <color name="dot_dashboard_accessibility">#D1C4E9</color>
     <color name="dot_dashboard_system">#FAFAFA</color>
 
+    <!-- App ops -->
+    <color name="switch_accent_color">@*android:color/accent_device_default_light</color>
+
 </resources>
