SoundSettings: Add charging vibration settings
Change-Id: Ie66f9261037bdab87b86cd49b558799decccd3b8
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/res/values/dot_strings.xml
+++ b/res/values/dot_strings.xml
@@ -85,7 +85,10 @@
 	<!-- Screenshot sound -->
     <string name="screenshot_sound_title">Screenshot sound</string>
     <string name="screenshot_sound_summary">Plays sound effect when screenshot is taken</string>
-	
+
+    <!-- Charging vibration -->
+    <string name="charging_vibro_title">Charging vibration</string>
+
 	<!-- Battery stats reset -->
     <string name="battery_stats_reset">Reset stats</string>
     <string name="battery_stats_message">Battery history stats are going to be reset</string>
