Settings: Add Font preference for font manager
Fix some stuff

aex edits:- Add an icon to the preference

Change-Id: Ifb6eb578e6b6b22ca15baa7cb8f8db32bebe6e15
Signed-off-by: Shubham Singh <coolsks94@gmail.com>
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/res/values/dot_strings.xml
+++ b/res/values/dot_strings.xml
@@ -188,6 +188,10 @@
 	<!-- doze on charge -->
     <string name="doze_on_charge_title">Show when charging</string>
     <string name="doze_on_charge_summary">Wake screen when charging</string>
+
+    <!-- Font picker -->
+    <string name="font_picker_title">Font</string>
+    <string name="disable_fonts_installed_title">Font picker is unavailable to avoid conflicts with Substratum. Uninstall it if you wish to use the font picker.</string>
 </resources>
 
 
