--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -149,6 +149,11 @@
         android:key="vr_display_pref"
         android:title="@string/display_vr_pref_title"
         android:fragment="com.android.settings.display.VrDisplayPreferencePicker" />
+	
+	<ListPreference
+        android:key="display_cutout_emulation"
+        android:title="@string/display_cutout_emulation"
+        settings:keywords="@string/display_cutout_emulation_keywords" />
 
     <PreferenceCategory
         android:key="theme_category"
