--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -67,4 +67,10 @@
         android:title="@string/aggressive_battery_title"
         android:summary="@string/aggressive_battery_summary" />
 
+    <com.android.settings.fuelgauge.PowerGaugePreference
+        android:key="battery_temp"
+        android:title="@string/battery_temp_title"
+        android:summary="@string/battery_temp_summary"
+        android:selectable="true" />
+
 </PreferenceScreen>
