[2/2] Settings: show AOD on charge setting
Change-Id: Iff6d8fea692a06c394e36a1ae821f1623ba67e67

--- a/res/values/dot_strings.xml
+++ b/res/values/dot_strings.xml
@@ -184,6 +184,10 @@
 	
 	<!-- Notification log -->
     <string name="notification_log_summary">Show notifications history log</string>
+	
+	<!-- doze on charge -->
+    <string name="doze_on_charge_title">Show when charging</string>
+    <string name="doze_on_charge_summary">Wake screen when charging</string>
 </resources>
 
 
