Increase toolbar elevation
Change-Id: I59e8b870e934ee4a89697bb097ae2b0ee94ab607

--- a/res/layout/settings_main_dashboard.xml
+++ b/res/layout/settings_main_dashboard.xml
@@ -75,6 +75,7 @@
                 android:foreground="?android:attr/selectableItemBackground"
                 android:contentInsetStartWithNavigation="64dp"
                 android:navigationIcon="@drawable/ic_search_24dp"
+				android:elevation="5dp"
                 android:theme="?android:attr/actionBarTheme">
 
                 <TextView
