dotos Automatic translation import
Change-Id: I3f1cfd15daf64ccd2d71a43220e857a6943a54ae

--- a/res/values-ja/dot_strings.xml
+++ b/res/values-ja/dot_strings.xml
@@ -13,11 +13,11 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- About phone screen, dotOS version -->
-    <string name="dot_version">dotOSバージョン</string>
+    <string name="dot_version">dotOS バージョン</string>
     <string name="dot_version_default">不明</string>
     <!-- dot ota -->
     <string name="dot_ota_title">dotOS OTA</string>
-    <string name="dot_ota_summary">dotOSシステムアップデート</string>
+    <string name="dot_ota_summary">dotOS システムアップデート</string>
     <!-- About phone screen, build date -->
     <string name="build_date">ビルド日時</string>
     <string name="build_date_default">2015-01-01-0000</string>
@@ -36,21 +36,21 @@
     <!-- About dotOS -->
     <string name="dot_about_info">私たちについて</string>
     <string name="dot_about_summary">私たちとチームの紹介</string>
-    <string name="about_dotos_desc">DOTはDroid On Timeの略です。DOTは最高の性能のために高度に最適化された純粋なAOSPをベースにしています。私たちのROMの主な目標はロー、ミッド、ハイエンドの私たちのROMを実行している全てのデバイスに最高に最適化された性能を提供することです。 私たちはあなたの端末を時間そのものと競争させるためにいます！</string>
-    <string name="dev_info">dotOSについて</string>
-    <string name="dot_team">dotOSチーム</string>
+    <string name="about_dotos_desc">DOT は Droid On Time の略です。DOT は最高の性能のために高度に最適化された純粋な AOSP をベースにしています。私たちの ROM の主な目標はロー、ミッド、ハイエンドの私たちの ROM を実行している全ての端末に最高に最適化された性能を提供することです。私たちはあなたの端末を時間そのものと競争させるためにいます!</string>
+    <string name="dev_info">dotOS について</string>
+    <string name="dot_team">dotOS チーム</string>
     <string name="maintainers">メンテナー </string>
     <string name="dev_1">Mohan Cm &#40;mohancm&#41;</string>
     <string name="dev1_description">オーナー/開発リーダー</string>
     <string name="dev_4">Sam Grande &#40;Reapergod35&#41;</string>
-    <string name="dev4_description">UI開発者/貢献者</string>
+    <string name="dev4_description">UI 開発者/貢献者</string>
     <string name="dev_5">Iacob Ionut </string>
-    <string name="dev5_description">UI開発者/貢献者</string>
+    <string name="dev5_description">UI 開発者/貢献者</string>
     <string name="dev_7">Hari Ambadi &#40;hariambadii&#41;</string>
     <string name="dev7_description">コアグラフィックス/ビジュアルデザイナー</string>
-    <string name="about_dotos">dotOSについて</string>
+    <string name="about_dotos">dotOS について</string>
     <string name="google">Google</string>
-    <string name="gplus_community">最新Romに関する更新を受け取るために私達のGoogle+コミュニティに参加しましょう</string>
+    <string name="gplus_community">最新 ROM に関する更新を受け取るために私達の Google+ コミュニティに参加しましょう</string>
     <string name="telegram">Telegram</string>
     <string name="telegram_community">私達のTelegnamグループに参加して家族の一部になりましょう</string>
     <string name="github">Github</string>
@@ -70,10 +70,10 @@
     <string name="maintainers_title">公式メンテナー</string>
     <string name="maintainers_summary">正式サポート端末と各メンテナ</string>
     <!-- Maintainer section -->
-    <string name="maintainer_description">メンテナ：%1$s</string>
+    <string name="maintainer_description">メンテナ: %1$s</string>
     <string name="loading_devices">端末一覧を読み込んでいます...</string>
     <string name="loading_devices_failed">端末一覧を読み込めませんでした</string>
-    <string name="devices_list_empty">リストが空です。リロードするにはアイコンをタップしてください。</string>
+    <string name="devices_list_empty">リストが空です。リロードするにはアイコンをタップして下さい。</string>
     <string name="reload_list">再読込</string>
     <!-- Expanded desktop -->
     <string name="power_menu_expanded_desktop">拡張デスクトップ</string>
@@ -81,7 +81,7 @@
     <string name="expanded_hide_status">ステータスバーを隠す</string>
     <string name="expanded_hide_navigation">ナビゲーションバーを隠す</string>
     <string name="expanded_hide_both">両方を隠す</string>
-    <string name="expanded_nothing_to_show">アプリごとの拡張の状態のカスタム設定を追加するには「全て拡張」をオフにしてください</string>
+    <string name="expanded_nothing_to_show">アプリごとの拡張の状態のカスタム設定を追加するには「全て拡張」を OFF にして下さい</string>
     <string name="expanded_desktop_state">拡張デスクトップの状態</string>
     <string name="expanded_enabled_for_all">全て拡張</string>
     <string name="expanded_user_configurable">ユーザー設定</string>
@@ -111,8 +111,8 @@
     <string name="app_ops_auto_start">自動起動</string>
     <string name="app_ops_delete_call_log">通話履歴の削除</string>
     <string name="app_ops_delete_contacts">連絡先の削除</string>
-    <string name="app_ops_delete_mms">MMSの削除</string>
-    <string name="app_ops_delete_sms">SMSの削除</string>
+    <string name="app_ops_delete_mms">MMS の削除</string>
+    <string name="app_ops_delete_sms">SMS の削除</string>
     <string name="app_ops_draw_on_top">上部に描画</string>
     <string name="app_ops_get_usage_stats">使用統計の取得</string>
     <string name="app_ops_keep_device_awake">スリープモードにしない</string>
@@ -122,7 +122,7 @@
     <string name="app_ops_modify_clipboard">クリップボードの変更</string>
     <string name="app_ops_modify_contacts">連絡先の更新</string>
     <string name="app_ops_modify_settings">設定の更新</string>
-    <string name="app_ops_mute_unmute_microphone">マイクの有効/無効</string>
+    <string name="app_ops_mute_unmute_microphone">マイク機能の切換</string>
     <string name="app_ops_play_audio">音声の再生</string>
     <string name="app_ops_post_notification">通知の配信</string>
     <string name="app_ops_project_media">メディアの投影</string>
@@ -130,12 +130,12 @@
     <string name="app_ops_read_call_log">通話履歴の読み取り</string>
     <string name="app_ops_read_clipboard">クリップボードの読み取り</string>
     <string name="app_ops_read_contacts">連絡先の読み取り</string>
-    <string name="app_ops_read_mms">MMSの読み取り</string>
-    <string name="app_ops_read_sms">SMSの読み取り</string>
-    <string name="app_ops_receive_sms">SMSの受信</string>
+    <string name="app_ops_read_mms">MMS の読み取り</string>
+    <string name="app_ops_read_sms">SMS の読み取り</string>
+    <string name="app_ops_receive_sms">SMS の受信</string>
     <string name="app_ops_record_audio">音声の録音</string>
-    <string name="app_ops_send_mms">MMSの送信</string>
-    <string name="app_ops_send_sms">SMSを送信</string>
+    <string name="app_ops_send_mms">MMS の送信</string>
+    <string name="app_ops_send_sms">SMS の送信</string>
     <string name="app_ops_toast_window">トーストメッセージ</string>
     <string name="app_ops_use_alarm_volume">アラームの音量</string>
     <string name="app_ops_use_audio_focus">音声フォーカス</string>
@@ -147,8 +147,8 @@
     <string name="app_ops_use_ring_volume">着信の音量</string>
     <string name="app_ops_use_vibrate">振動フィードバック</string>
     <string name="app_ops_use_voice_volume">音声通話の音量</string>
-    <string name="app_ops_write_mms">MMSの書き込み</string>
-    <string name="app_ops_write_sms">SMSの書き込み</string>
+    <string name="app_ops_write_mms">MMS の書き込み</string>
+    <string name="app_ops_write_sms">SMS の書き込み</string>
     <string name="app_ops_use_fingerprint">指紋</string>
     <string name="app_ops_add_voicemail">ボイスメール</string>
     <string name="app_ops_read_phone_state">端末の状態へのアクセス</string>
@@ -180,7 +180,7 @@
     <string name="local_backup_password_title">PCバックアップパスワード</string>
     <!-- Battery saver color -->
     <string name="battery_saver_color_title">警告の色</string>
-    <string name="battery_saver_color_summary">バッテリーセーバーがオンの時、ステータスバーとナビバーをオレンジ色にします。</string>
+    <string name="battery_saver_color_summary">バッテリーセーバーが ON の時にステータスバーとナビゲーションバーをオレンジ色にする</string>
     <!-- Wakeup options -->
     <string name="wakeup_when_plugged_unplugged_title">充電開始でスリープ解除</string>
     <string name="wakeup_when_plugged_unplugged_summary">電源ケーブルの抜き差し時のスリープ解除</string>
@@ -194,27 +194,27 @@
     <!-- Custom light color -->
     <string name="light_customization">LEDライトの通知</string>
     <string name="custom_light_title">ライトカラー</string>
-    <string name="custom_light_on_time_title">"LEDの点滅している時の光っている時間（ms）"</string>
-    <string name="custom_light_off_time_title">"LEDの点滅している時の消えている時間（ms）"</string>
+    <string name="custom_light_on_time_title">"LED の点滅している時の光っている時間 (ms)"</string>
+    <string name="custom_light_off_time_title">"LED の点滅している時の消えている時間 (ms)"</string>
     <string name="app_notifications_info_desc">上記のいずれかのチャンネルをタップして、LEDの色やその他のオプションを設定します。</string>
     <string name="value_equals_default">既定</string>
     <string name="show_light_on_zen_title">マナーモードの間はライトを点滅させる</string>
     <!-- Volume settings - Volume adjustment sound -->
     <string name="volume_adjust_sounds_title">音量調整の音</string>
     <!-- Themes -->
-    <string name="system_theme_style_title">UIのスタイル</string>
+    <string name="system_theme_style_title">UI のスタイル</string>
     <string name="system_theme_style_auto">壁紙基調</string>
-    <string name="system_theme_style_light">明るいUI</string>
-    <string name="system_theme_style_dark">暗いUI</string>
-    <string name="system_theme_style_black">黒いUI</string>
+    <string name="system_theme_style_light">明るい UI</string>
+    <string name="system_theme_style_dark">暗い UI</string>
+    <string name="system_theme_style_black">黒い UI</string>
     <string name="system_theme_style_neo">dotOS Neo UI</string>
     <string name="theme_applied_toast">テーマが適用されました</string>
-    <string name="applying_theme_toast">テーマを適用中です。しばらくお待ちください...</string>
+    <string name="applying_theme_toast">テーマを適用中です。しばらくお待ち下さい...</string>
     <!-- Android debugging over WiFi -->
-    <string name="adb_over_network">ネット経由のADB</string>
-    <string name="adb_over_network_summary">ネットワークインターフェース（Wi-Fi、USBネットワーク）経由でのTCP/IPデバッグを有効にします。この設定は再起動時にリセットされます。</string>
+    <string name="adb_over_network">ネット経由の ADB</string>
+    <string name="adb_over_network_summary">ネットワークインターフェース (Wi-Fi、USB ネットワーク) 経由での TCP/IP デバッグを有効にします。この設定は再起動時にリセットされます。</string>
     <!-- Warning for Adb over Network -->
-    <string name="adb_over_network_warning">警告：ネットワーク経由でのADBを有効にすると、あなたの携帯電話はGSMデータネットワークを含む接続している全てのネットワークから侵入できるようになります。\n\nこの機能は信頼されたネットワークに接続している時にのみ使用して下さい。\n\nこの機能を本当に有効にしますか？</string>
+    <string name="adb_over_network_warning">警告: ネットワーク経由での ADB を有効にすると、あなたの携帯電話は GSM データネットワークを含む接続している全てのネットワークから侵入できるようになります。\n\nこの機能は信頼されたネットワークに接続している時にのみ使用して下さい。\n\nこの機能を本当に有効にしますか?</string>
     <!-- Per-app data restrictions -->
     <string name="data_usage_app_restrict_data">モバイルデータ</string>
     <string name="data_usage_app_restrict_data_summary">モバイルデータ使用量を有効化する</string>
@@ -222,16 +222,16 @@
     <string name="data_usage_app_restrict_wifi_summary">Wi\u2011Fi データ使用量を有効化する</string>
     <!-- OS Information -->
     <string name="os_information">OS情報</string>
-    <string name="os_summary_info">このROMに関する情報</string>
+    <string name="os_summary_info">この ROM に関する情報</string>
     <!-- Manual provisioning support -->
-    <string name="sim_enabler_summary"><xliff:g id="displayName">%1$s</xliff:g>は<xliff:g id="status" example="disabled">%2$s</xliff:g>です</string>
+    <string name="sim_enabler_summary"><xliff:g id="displayName">%1$s</xliff:g> は <xliff:g id="status" example="disabled">%2$s</xliff:g> です</string>
     <string name="sim_enabled">有効</string>
     <string name="sim_disabled">無効</string>
     <string name="sim_missing">挿入されていないか、問題があります。</string>
-    <string name="sim_enabler_need_disable_sim">SIMカードはアクティベート解除されます。続行しますか？</string>
+    <string name="sim_enabler_need_disable_sim">SIM カードはアクティベート解除されます。続行しますか?</string>
     <string name="sim_enabler_will_disable_sim_title">注意</string>
-    <string name="sim_enabler_need_switch_data_service">このSIMは無効になり、SIM <xliff:g id="slotid">%1$s</xliff:g>がデータサービスに使用されます。続けてもよろしいですか？</string>
-    <string name="sim_enabler_airplane_on">機内モードがオンになっている間はこの操作を実行することはできません</string>
+    <string name="sim_enabler_need_switch_data_service">この SIM は無効になり、SIM <xliff:g id="slotid">%1$s</xliff:g> がデータサービスに使用されます。続けてもよろしいですか?</string>
+    <string name="sim_enabler_airplane_on">機内モードが ON になっている間はこの操作を実行することはできません</string>
     <string name="sim_enabler_in_call">通話中はこの操作を実行することはできません</string>
     <string name="sim_enabler_both_inactive">全てのSIMカードを無効にはできません</string>
     <string name="sim_enabler_enabling">アクティベート中\u2026</string>
