--- a/res/values-es/dot_strings.xml
+++ b/res/values-es/dot_strings.xml
@@ -48,15 +48,15 @@
     <string name="dev5_description">Desarrollador de IU/colaborador</string>
     <string name="dev_7">Hari Ambadi &#40;hariambadii&#41;</string>
     <string name="dev7_description">Efectos del núcleo/Diseñador Visual</string>
-    <string name="about_dotos">About dotOS</string>
+    <string name="about_dotos">Acerca de dotOs</string>
     <string name="google">Google</string>
-    <string name="gplus_community">Join our google plus community to stay updated about the rom</string>
+    <string name="gplus_community">Únete a nuestra comunidad de Google+ más para mantenerse al día sobre el rom</string>
     <string name="telegram">Telegram</string>
-    <string name="telegram_community">Join our telegram group and be a part of our family</string>
+    <string name="telegram_community">Únete a nuestro grupo telegram y forma parte de nuestra familia</string>
     <string name="github">Github</string>
-    <string name="git_link">View our source to know what makes it awesome</string>
-    <string name="website">Website</string>
-    <string name="webiste_link">Visit our website for downloads and stuffs</string>
+    <string name="git_link">Mira nuestra fuente para saber lo que la hace impresionante</string>
+    <string name="website">Página Web</string>
+    <string name="webiste_link">Visita nuestro sitio web para descargas y mas cosas</string>
     <!-- About Contributors -->
     <string name="dot_contributors">Colaboradores</string>
     <string name="contributor_1">Alex Brookes</string>
@@ -207,7 +207,7 @@
     <string name="system_theme_style_light">Interfaz de Usuario Clara</string>
     <string name="system_theme_style_dark">Interfaz de Usuario Oscura</string>
     <string name="system_theme_style_black">Interfaz de Usuario Negra</string>
-    <string name="system_theme_style_neo">dotOS Neo UI</string>
+    <string name="system_theme_style_neo">dotOs Neo UI</string>
     <string name="theme_applied_toast">Tema aplicado!</string>
     <string name="applying_theme_toast">Aplicando tema, por favor espere...</string>
     <!-- Android debugging over WiFi -->
@@ -241,16 +241,16 @@
     <string name="sub_deactivate_success">SIM desactivada.</string>
     <string name="sub_deactivate_failed">Desactivación fallida.</string>
     <!-- Notification log -->
-    <string name="notification_log_summary">Show notifications history log</string>
+    <string name="notification_log_summary">Mostrar el historial de notificaciones</string>
     <!-- Device specific doze package -->
     <!-- Proximity wake -->
-    <string name="proximity_wake_title">Prevent accidental wake-up</string>
-    <string name="proximity_wake_summary">Check the proximity sensor prior to waking up screen</string>
+    <string name="proximity_wake_title">Prevenir el encendido accidental</string>
+    <string name="proximity_wake_summary">Comprobar el sensor de proximidad antes de encender la pantalla</string>
     <!-- Search -->
-    <string name="menu_search">Search apps</string>
-    <string name="menu_search_hint">Search apps\u2026</string>
+    <string name="menu_search">Buscar aplicaciones</string>
+    <string name="menu_search_hint">Buscar aplicaciones\u2026</string>
     <!-- Reset battery stats -->
-    <string name="ok">Ok</string>
-    <string name="menu_stats_reset">Reset stats</string>
-    <string name="reset_stats_msg">Battery history stats are going to be reset</string>
+    <string name="ok">Vale</string>
+    <string name="menu_stats_reset">Restablecer estadísticas</string>
+    <string name="reset_stats_msg">Las estadísticas de la batería van a restablecerse</string>
 </resources>
