Settings: Add hide notch support [3/3]
Change-Id: I723d64ff0bda8795dc48c6e59739bc126e4b6601

--- a/res/values/dot_strings.xml
+++ b/res/values/dot_strings.xml
@@ -188,6 +188,12 @@
 	<!-- doze on charge -->
     <string name="doze_on_charge_title">Show when charging</string>
     <string name="doze_on_charge_summary">Wake screen when charging</string>
+
+    <!-- Notch behavior -->
+    <string name="display_cutout_mode_title">Notch behavior</string>
+    <string name="display_cutout_mode_normal">Default</string>
+    <string name="display_cutout_mode_hidden">Hidden</string>
+
 </resources>
 
 
