Implement Aggressive Battery [2/2]
Aggressive Idle is a feature that makes the device idle constants
more aggressive and ignores device motion when entering doze mode.

Aggressive Standby is a feature that stops apps from running in
the background as much.

pr edits: just create a blank fragment and use our GlobalSettingSwitchPreference
to toggle dem switches son

Change-Id: Ia50819daad84a79900635e49f98646e381ebd47e
Signed-off-by: Joe Maples <joe@frap129.org>

--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -61,4 +61,10 @@
         android:title="@string/device_screen_usage"
         android:selectable="false" />
 
+    <Preference
+        android:fragment="com.android.settings.fuelgauge.AggressiveBatterySettings"
+        android:key="aggressive_battery"
+        android:title="@string/aggressive_battery_title"
+        android:summary="@string/aggressive_battery_summary" />
+
 </PreferenceScreen>
