--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -108,7 +108,7 @@
     <color name="fallback_tintColor">#89000000</color>
 
     <!-- Suggestion/condition colors -->
-    <color name="suggestion_condition_background">#f2f2f2</color>
+    <color name="suggestion_condition_background">#ffffff</color>
     <color name="condition_card_background">#f8f8f8</color>
 
     <!-- Dashboard/homepage icon background colors -->
