--- a/res/layout/settings_main_dashboard.xml
+++ b/res/layout/settings_main_dashboard.xml
@@ -22,72 +22,52 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?android:attr/colorPrimary"
     android:orientation="vertical">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
+        android:id="@+id/search_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-		android:orientation="vertical"
-        android:background="?android:attr/colorPrimary">
+        android:layout_margin="16dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="3dp">
 
         <RelativeLayout
-            android:id="@+id/search_bar_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/settings_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/google_sans_bold"
-                android:text="@string/settings_label"
-                android:textColor="?android:attr/textColorPrimary"
-                android:textSize="32sp"
-                android:textStyle="bold" />
-				
-			<com.android.settings.dashboard.DashboardProfileIcon
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_alignTop="@+id/settings_title"
-				android:layout_alignParentEnd="true"
-				android:layout_marginEnd="16dp" />
-
-        </RelativeLayout>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/search_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            app:cardCornerRadius="12dp"
-            app:cardElevation="3dp">
+            android:layout_height="wrap_content">
 
             <Toolbar
                 android:id="@+id/search_action_bar"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-				android:background="@drawable/rounded_outline_bg"
-				android:clickable="true"
+                android:background="@drawable/rounded_outline_bg"
+                android:clickable="true"
                 android:clipChildren="true"
-                android:foreground="?android:attr/selectableItemBackground"
                 android:contentInsetStartWithNavigation="64dp"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:navigationIcon="@drawable/ic_search_24dp"
                 android:theme="?android:attr/actionBarTheme">
 
                 <TextView
                     android:id="@+id/search_action_bar_title"
                     style="@style/TextAppearance.SearchBar"
-					android:alpha="0.8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:alpha="0.8"
                     android:text="@string/search_menu" />
             </Toolbar>
-        </android.support.v7.widget.CardView>
 
-    </LinearLayout>
+            <com.android.settings.dashboard.DashboardProfileIcon
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="16dp" />
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
 
     <FrameLayout
         android:id="@+id/main_content"
