Implement new Device Info UI
Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>
Change-Id: Ia2c9ac936b06546037089dc500cea229a4ba36e6

--- a/res/values/dot_strings.xml
+++ b/res/values/dot_strings.xml
@@ -188,6 +188,12 @@
 	<!-- doze on charge -->
     <string name="doze_on_charge_title">Show when charging</string>
     <string name="doze_on_charge_summary">Wake screen when charging</string>
+    
+    <!-- About System -->
+    <string name="tab_software">Software</string>
+    <string name="tab_status">Status</string>
+    <string name="tab_other">Other</string>
+    
 </resources>
 
 
