Implement new Device Info UI
Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>
Change-Id: Ia2c9ac936b06546037089dc500cea229a4ba36e6

--- a/res/values/dot_styles.xml
+++ b/res/values/dot_styles.xml
@@ -30,4 +30,10 @@
 	<declare-styleable name="Themes">
         <attr name="waveViewStyle" format="reference"/>
     </declare-styleable>
+    
+    <style name="MaterialTabComponent" parent="android:style/TextAppearance.DeviceDefault.Widget.Button">
+        <item name="textAllCaps">false</item>
+        <item name="android:fontFamily">@font/google_sans_bold</item>
+        <item name="android:textColor">@color/material_tab_text_color</item>
+    </style>
 </resources>
