--- a/res/values/dot_strings.xml
+++ b/res/values/dot_strings.xml
@@ -170,4 +170,8 @@
     <!-- Font picker -->
     <string name="font_picker_title">Font</string>
     <string name="font_picker_progress">Applying new font\u2026</string>
+    <!-- About device - System -->
+    <string name="tab_software">Software</string>
+    <string name="tab_status">Status</string>
+    <string name="tab_other">Other</string>
 </resources>
