Implement new Device Info UI
Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>
Change-Id: Ia2c9ac936b06546037089dc500cea229a4ba36e6

--- a/res/values/dot_strings.xml
+++ b/res/values/dot_strings.xml
@@ -413,4 +413,9 @@
     <string name="app_ops_permissions_allowed">Allowed</string>
     <string name="app_ops_permissions_ignored">Ignored</string>
     <string name="app_ops_permissions_always_ask">Always ask</string>
+
+    <!-- About device - System -->
+    <string name="tab_software">Software</string>
+    <string name="tab_status">Status</string>
+    <string name="tab_other">Other</string>
 </resources>
