--- a/res/values/dot_strings.xml
+++ b/res/values/dot_strings.xml
@@ -209,4 +209,9 @@
     <string name="aggressive_standby_summary">Restrict apps from running the background</string>
     <string name="aggressive_battery_saver_title">Auto-enable on battery saver </string> 
     <string name="aggressive_battery_saver_summary">Enable Aggressive Battery automatically when using battery saver</string>
+
+    <!-- About device - System -->
+    <string name="tab_software">Software</string>
+    <string name="tab_status">Status</string>
+    <string name="tab_other">Other</string>
 </resources>
