--- a/res/values/dot_strings.xml
+++ b/res/values/dot_strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <!--
      Copyright (C) 2018 Project dotOS
      Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,32 +12,27 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-
     <!-- About phone screen, DotOS version -->
     <string name="dot_version">dotOS version</string>
     <string name="dot_version_default">Unknown</string>
     <string name="keywords_dot_version">dotOS version, dot version</string>
-	
-	<!-- Toolbar -->
-	<string name="settings_head_title">droid on time 3.0</string>
-
+    <!-- Toolbar -->
+    <string name="settings_head_title">droid on time 3.0</string>
     <!-- About phone screen, build date -->
     <string name="build_date">Build date</string>
     <string name="build_date_default">2015-01-01-0000</string>
     <string name="keywords_build_date">build date, build info</string>
-	
-	<!-- dotOS System Updates -->
-	<string name="dotos_updater_title">System Updater</string>
+    <!-- dotOS System Updates -->
+    <string name="dotos_updater_title">System Updater</string>
     <string name="dotos_updater_summary">dotOS System Updater</string>
-
     <!-- Fingerprint location message -->
     <string name="security_settings_fingerprint_enroll_find_sensor_message_front">Locate the fingerprint sensor on the front of your phone.</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_message_left">Locate the fingerprint sensor on the left side of your phone.</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_message_right">Locate the fingerprint sensor on the right side of your phone.</string>
-
     <!-- Manage applications, package string displayed in app snippet -->
-    <string name="packagename_text"><xliff:g id="package_name">%1$s</xliff:g></string>
-
+    <string name="packagename_text">
+        <xliff:g id="package_name">%1$s</xliff:g>
+    </string>
     <!-- About dotOS -->
     <string name="dot_about_info">About us</string>
     <string name="dot_about_summary">Our introduction and our team</string>
@@ -45,11 +40,9 @@
     <string name="dev_info">About dotOS</string>
     <string name="github">Github</string>
     <string name="github_description">View our source code</string>
-    <string name="gplus">Google+</string>
-    <string name="gplus_description">Join our G+ community</string>
     <string name="telegram">Telegram</string>
     <string name="telegram_description">Join our Telegram Community</string>
-	<string name="telegram_channel">Telegram Channel</string>
+    <string name="telegram_channel">Telegram Channel</string>
     <string name="telegram_channel_description">Subscribe to our Telegram channel</string>
     <string name="web">Downloads Center</string>
     <string name="web_description">Visit our download portal</string>
@@ -60,49 +53,39 @@
     <string name="maintainers">Maintainers</string>
     <string name="maintainers_title">Official maintainers</string>
     <string name="maintainers_summary">Officially supported devices and their respective maintainers.</string>
-
     <!-- Maintainer section -->
     <string name="maintainer_description">Maintainer: %1$s</string>
     <string name="loading_devices">Loading devices list...</string>
     <string name="loading_devices_failed">Failed to load devices list</string>
     <string name="devices_list_empty">List is empty, tap the icon to reload</string>
     <string name="reload_list">Reload</string>
-
     <!-- Changelog -->
     <string name="changelog_title">Changelog</string>
     <string name="changelog_summary">Recent Changes</string>
     <string name="changelog_loading">Loading changelog\u2026</string>
     <string name="changelog_error">Unable to load changelog</string>
-
     <!-- Scramble PIN Layout on Lockscreen -->
     <string name="unlock_scramble_pin_layout_title">Scramble layout</string>
     <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
-
     <!-- Quick unlock -->
     <string name="unlock_quick_unlock_control_title">Quick unlock</string>
     <string name="unlock_quick_unlock_control_summary">Unlock automatically when the correct PIN/password is entered</string>
-	
-	<!-- Screenshot sound -->
+    <!-- Screenshot sound -->
     <string name="screenshot_sound_title">Screenshot sound</string>
     <string name="screenshot_sound_summary">Plays sound effect when screenshot is taken</string>
-
     <!-- Charging vibration -->
     <string name="charging_vibro_title">Charging vibration</string>
-
-	<!-- Battery stats reset -->
+    <!-- Battery stats reset -->
     <string name="battery_stats_reset">Reset stats</string>
     <string name="battery_stats_message">Battery history stats are going to be reset</string>
     <string name="ok_string">Ok</string>
-
     <string name="dashboard_conditions_title">Dashboard conditions</string>
-	<string name="dashboard_category">Dashboard category</string>
+    <string name="dashboard_category">Dashboard category</string>
     <string name="summary_dashboard_conditions_enabled">Dashboard conditions are enabled</string>
     <string name="summary_dashboard_conditions_disabled">Dashboard conditions are disabled</string>
-
     <string name="dashboard_suggestions_title">Dashboard suggestions</string>
     <string name="summary_dashboard_suggestions_enabled">Dashboard suggestions are enabled</string>
     <string name="summary_dashboard_suggestions_disabled">Dashboard suggestions are disabled</string>
-
     <!-- Themes -->
     <string name="theme_category_title">System Theme</string>
     <string name="system_theme_style_title">UI style</string>
@@ -118,20 +101,26 @@
     <string name="force_allow_system_themes_summary">Allows you to use following themes and fonts options inspite of substratum installed.</string>
     <string name="force_theme_warning_title">Warning !</string>
     <string name="force_theme_warning_message">This could cause conflicts between substratum themes and system themes. We hope you know what are you getting into. #DontBlameUsLater :D</string>
-
     <!-- Selinux -->
     <string name="selinux_status">SELinux status</string>
     <string name="selinux_status_disabled">Disabled</string>
     <string name="selinux_status_permissive">Permissive</string>
     <string name="selinux_status_enforcing">Enforcing</string>
-
     <!-- Manual provisioning support -->
-    <string name="sim_enabler_summary"><xliff:g id="displayName">%1$s</xliff:g> is <xliff:g id="status" example="disabled">%2$s</xliff:g></string>
+    <string name="sim_enabler_summary">
+        <xliff:g id="displayName">%1$s</xliff:g>
+        is
+        <xliff:g id="status" example="disabled">%2$s</xliff:g>
+    </string>
     <string name="sim_disabled">disabled</string>
     <string name="sim_missing">missing or faulty</string>
     <string name="sim_enabler_need_disable_sim">SIM card will be deactivated. Do you want to continue?</string>
     <string name="sim_enabler_will_disable_sim_title">Attention</string>
-    <string name="sim_enabler_need_switch_data_service">This SIM will be disabled and SIM <xliff:g id="slotid">%1$s</xliff:g> will be used for data services. Are you sure you want to continue?</string>
+    <string name="sim_enabler_need_switch_data_service">
+        This SIM will be disabled and SIM
+        <xliff:g id="slotid">%1$s</xliff:g>
+        will be used for data services. Are you sure you want to continue?
+    </string>
     <string name="sim_enabler_airplane_on">Unable to perform the operation while airplane mode is on.</string>
     <string name="sim_enabler_in_call">Unable to perform the operation while in call.</string>
     <string name="sim_enabler_both_inactive">Can\'t disable all SIM cards</string>
@@ -141,57 +130,44 @@
     <string name="sub_activate_failed">Activation failed.</string>
     <string name="sub_deactivate_success">SIM deactivated.</string>
     <string name="sub_deactivate_failed">Deactivation failed.</string>
-
     <!-- Per-app data restrictions -->
     <string name="data_usage_app_restrict_data">Cellular data</string>
     <string name="data_usage_app_restrict_data_summary">Enable usage of cellular data</string>
     <string name="data_usage_app_restrict_wifi">Wi\u2011Fi data</string>
     <string name="data_usage_app_restrict_wifi_summary">Enable usage of Wi\u2011Fi data</string>
-	
-	<!-- Sizes for pattern lockscreen -->
+    <!-- Sizes for pattern lockscreen -->
     <string name="lock_pattern_size_3" translatable="false">3 \u00d7 3</string>
     <string name="lock_pattern_size_4" translatable="false">4 \u00d7 4</string>
     <string name="lock_pattern_size_5" translatable="false">5 \u00d7 5</string>
     <string name="lock_pattern_size_6" translatable="false">6 \u00d7 6</string>
-
     <string name="lock_settings_picker_pattern_size_message">Choose a pattern size</string>
     <!-- Whether a visible red line will be drawn after the user has drawn the unlock pattern incorrectly -->
     <string name="lockpattern_settings_enable_error_path_title">Show pattern error</string>
     <!-- Whether the dots will be drawn when using the lockscreen pattern -->
     <string name="lockpattern_settings_enable_dots_title">Show pattern dots</string>
-
     <!-- Lock screen vibrate settings -->
     <string name="lockscreen_vibrate_enabled_title">Vibrate</string>
     <string name="lockscreen_vibrate_enabled_head">Vibrate when unlocking</string>
-
     <!-- Whether the keyguard will directly show the lock entry -->
     <string name="directly_show_lock">Direct unlock</string>
     <string name="directly_show_lock_summary">Skip the swipe to unlock screen and immediately begin key entry</string>
-	
-	<!-- QS tile styles -->
+    <!-- QS tile styles -->
     <string name="qs_tile_style_title">QS tile style</string>
     <string name="qs_tile_style_default">Default</string>
     <string name="qs_tile_style_square">Square</string>
     <string name="qs_tile_style_rounded_square">Rounded square</string>
     <string name="qs_tile_style_squircle">Squircle</string>
     <string name="qs_tile_style_tear_drop">Tear drop</string>
-
     <!-- Sound: Title for the option defining the phone ringtone for slot1 on Muilti SIM device. [CHAR LIMIT=50] -->
     <string name="ringtone1_title">Phone ringtone - SIM 1</string>
-
     <!-- Sound: Title for the option defining the phone ringtone for slot2 on Muilti SIM device. [CHAR LIMIT=50] -->
     <string name="ringtone2_title">Phone ringtone - SIM 2</string>
-	
-	<!-- Notification log -->
+    <!-- Notification log -->
     <string name="notification_log_summary">Show notifications history log</string>
-	
-	<!-- doze on charge -->
+    <!-- doze on charge -->
     <string name="doze_on_charge_title">Show when charging</string>
     <string name="doze_on_charge_summary">Wake screen when charging</string>
-
     <!-- Font picker -->
     <string name="font_picker_title">Font</string>
     <string name="font_picker_progress">Applying new font\u2026</string>
 </resources>
-
-
