--- a/res/layout/condition_header.xml
+++ b/res/layout/condition_header.xml
@@ -20,6 +20,8 @@
     style="@style/SuggestionConditionStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android;layout_marginEnd="16dp"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
     android:orientation="vertical">
