--- a/res/layout/condition_container.xml
+++ b/res/layout/condition_container.xml
@@ -30,8 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardUseCompatPadding="true"
-        app:cardElevation="2dp"
-        app:cardCornerRadius="@dimen/suggestion_card_corner_radius">
+        app:cardElevation="0dp">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/data"
