about device: make tabitems scrollable
Change-Id: Iac4dc9289d6e9de7474ec285a9399e3163557e08

--- a/res/layout/dot_about_system.xml
+++ b/res/layout/dot_about_system.xml
@@ -65,7 +65,7 @@
             app:tabIndicator="@drawable/material_tab_indicator"
             app:tabIndicatorFullWidth="false"
             app:tabMinWidth="112dp"
-            app:tabMode="fixed"
+            app:tabMode="scrollable"
             app:tabTextAppearance="@style/MaterialTabComponent">
 
             <com.android.settings.dot.TabItem
