--- a/res/xml/ambient_display_settings.xml
+++ b/res/xml/ambient_display_settings.xml
@@ -30,7 +30,8 @@
             android:key="ambient_display_always_on"
             android:title="@string/doze_always_on_title"
             android:summary="@string/doze_always_on_summary"
-            settings:controller="com.android.settings.display.AmbientDisplayAlwaysOnPreferenceController" />
+            settings:controller="com.android.settings.display.AmbientDisplayAlwaysOnPreferenceController" 
+            android:defaultValue="false" />
 
         <Preference
             android:key="ambient_display_double_tap"
